LS-2307 - dish controller get methods done.